<resources>
    <string name="app_name">Find Me a Mechanic</string>
    <string name="cardView_repairman">\u0020\u0020\u0020Szakember vagyok\u0020\u0020\u0020</string>
    <string name="cardView_client">Szakembert keresek</string>
    <string name="register_name">Név</string>
    <string name="register_phoneNr">Telefonszám</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Jelszó</string>
    <string name="register_password_conf">Jelszó megerősítése</string>
    <string name="register_as_client">Regisztráció</string>
    <string name="register_as_repairman">Tovább</string>
    <string name="text_login">Bejelentkezés</string>
    <string name="text_forgotten_password">Elfelejtetted a jelszavad?</string>
    <string name="text_login_with_google">Vagy jelentkezz be Google fiókkal:</string>
    <string name="text_register">Nincs még fiókod? Regisztrálj!</string>
    <string name="text_post_job">Munka hozzáadása</string>
    <string name="text_welcome">Üdv,</string>
    <string name="text_active_jobs">Aktív bejelentéseid</string>
    <string name="text_no_active_job">Nincs aktív bejelentésed!</string>
    <string name="text_post_job_header">Munka\nhozzáadása</string>
    <string name="post_job_name">Munka megnevezése</string>
    <string name="dropdown_job_types">Munka típusa</string>
    <string name="text_job_description">Munka leírása</string>
    <string name="text_job_deadline">Határidő</string>
    <string name="text_job_location">Helyszín</string>
    <string name="text_job_picture_upload">Kép feltöltése:</string>
    <string name="text_add_job">Munka hozzáadása</string>
    <string name="register_repman_job_type">Foglalkozás</string>
    <string name="register_repman_company_name">Cégnév</string>
    <string name="register_repman_company_address">Cég székhelye</string>
    <string name="register_repman_tax_number">Adószám</string>
    <string name="register_repman_finalize_reg">Véglegesítés</string>
    <string name="text_no_applicant">Nincs jelentkezett szakember!</string>
    <string name="text_job_details_description">Leírás:</string>
    <string name="text_job_details_type">Munka típusa:</string>
    <string name="text_job_details_deadline">Határidő:</string>
    <string name="text_job_details_location">Helyszín:</string>
    <string name="text_job_details_applicants">Jelentkezett szakemberek:</string>
    <string name="text_job_details_post_date">Feladás dátuma:</string>
    <string name="button_job_details_delete">\u0020\u0020\u0020Törlés\u0020\u0020\u0020</string>
    <string name="button_job_details_modify">Módosítás</string>
    <string name="text_active_jobs_repairman">Aktív bejelentések</string>
    <string name="text_active_jobs_title_repairman">Aktív munkáid</string>
    <string name="text_search_distance_repairman">Keresési távolság</string>
    <string name="text_job_details_sender">Bejelentő:</string>
    <string name="text_apply_job_apply">Jelentkezés</string>
    <string name="text_button_apply_job">Jelentkeztél!</string>
    <string name="nav_text_active_jobs">Aktív munkák</string>
    <string name="nav_text_closed_jobs">Lezárt munkák</string>
    <string name="nav_text_settings">Beállítások</string>
    <string name="nav_text_search_jobs">Összes munka</string>
    <string name="text_register_text">Regisztráció</string>
    <string name="string_rep_registration">Szerelő regisztráció</string>
    <string name="text_default_profile">-</string>
    <string name="text_final_applicant">Munkát végző szakember:</string>
    <string name="text_call_repairman">Hívás</string>
    <string name="text_finished_jobs_title">Lezárt bejelentéseid</string>
    <string name="text_selected_repairman">Munkát elvégző szakember:</string>
    <string name="text_date_finished">Befejezés dátuma:</string>
    <string name="button_text_rate_job">Munka értékelése</string>
    <string name="button_text_download_worksheet">Munkalap letöltése</string>
    <string name="text_all_jobs">Összes munka</string>
    <string name="text_close_job">Munka befejezése</string>
    <string name="text_sheet_title">Munkalap</string>
    <string name="text_repair_description">Javítás leírása</string>
    <string name="button_text_add_item">Új tétel</string>
    <string name="text_new_item_name">Megnevezés</string>
    <string name="sheet_title">Munkalap</string>
    <string name="sheet_number">Munkalap száma:</string>
    <string name="sheet_date">Felvétel dátuma:</string>
    <string name="sheet_client_data">Megrendelő adatai:</string>
    <string name="sheet_job_number">Megrendelés azonosító:</string>
    <string name="sheet_job_description_title">Javítás leírása</string>
    <string name="sheet_job_items">Felhasznált tételek:</string>
    <string name="sheet_item_name">Tétel megnevezése</string>
    <string name="sheet_item_quantity">Mennyiség</string>
    <string name="sheet_item_price">Egységár</string>
    <string name="sheet_total_price">Összesen fizetendő:\u0020</string>
    <string name="text_finished_jobs_title_repman">Lezárt munkáid</string>
    <string name="text_title_settings">Beálítások</string>
    <string name="settings_profile_headline">Profil</string>
    <string name="settings_profile_modify">Profil módosítása</string>
    <string name="settings_logout">Kijelentkezés</string>
    <string name="settings_notifications_headline">Értesítések</string>
    <string name="button_modify">Módosítás</string>
    <string name="password_old">Régi jelszó</string>
    <string name="password_new">Új jelszó</string>
    <string name="password_new_confirm">Új jelszó megerősítése</string>
    <string name="btn_delete_profile">Profil\ntörlése</string>
    <string name="report_problem">Hibabejelentés</string>
    <string name="new_applicant">Új jelentkező a munkánál</string>
    <string name="user_report_email_text">Kérünk, hogy ide írd le, hogy melyik bejelentésnél volt problémád, és hogy melyik felhasználóval a nevének és az e-mail címének meghatározásával!
        A lehető leghamarabb kivizsgáljuk a problémát. Elnézést kérünk a kellemetlenségekért!</string>
    <string name="bug_report_email_text">Kérünk, ide írd le, hogy milyen hibát tapasztaltál az alkalmazás használata során, valamint, ha tudod, azt is, hogy hogyan idézted elő.
    A lehető leghamarabb kivizsgáljuk a problémát. Köszönjük a bejelentésedet!</string>
    <string name="report_user">Felhasználó jelentése</string>
    <string name="report_app_bug">Probléma az applikációval</string>
</resources>